# parir

./: README.md  create_tables.py  pyproject.toml  settings.yaml
metadata/: commodities.yaml  durable.yaml  nutrition.yaml  schema.yaml  tables.yaml
parir/: durable.py
